[package]
name = "async-runtime-test-rust-vs-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0", features=["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
async-trait = "0.1"
futures = "0.3"
